logs/users_and_posts_etl_dag/load_data/2021-09-07T024031.592596+0000/1.log
[2021-09-07 02:40:33,749] {taskinstance.py:903} INFO - Dependencies all met for <TaskInstance: users_and_posts_etl_dag.load_data 2021-09-07T02:40:31.592596+00:00 [queued]>
[2021-09-07 02:40:33,758] {taskinstance.py:903} INFO - Dependencies all met for <TaskInstance: users_and_posts_etl_dag.load_data 2021-09-07T02:40:31.592596+00:00 [queued]>
[2021-09-07 02:40:33,758] {taskinstance.py:1094} INFO - 
--------------------------------------------------------------------------------
[2021-09-07 02:40:33,758] {taskinstance.py:1095} INFO - Starting attempt 1 of 1
[2021-09-07 02:40:33,758] {taskinstance.py:1096} INFO - 
--------------------------------------------------------------------------------
[2021-09-07 02:40:33,770] {taskinstance.py:1114} INFO - Executing <Task(PythonOperator): load_data> on 2021-09-07T02:40:31.592596+00:00
[2021-09-07 02:40:33,773] {standard_task_runner.py:52} INFO - Started process 10660 to run task
[2021-09-07 02:40:33,776] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'users_and_posts_etl_dag', 'load_data', '2021-09-07T02:40:31.592596+00:00', '--job-id', '118', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/hoverstate_etl.py', '--cfg-path', '/tmp/tmpl9_c28tn', '--error-file', '/tmp/tmp2kxgd7j7']
[2021-09-07 02:40:33,776] {standard_task_runner.py:77} INFO - Job 118: Subtask load_data
[2021-09-07 02:40:33,806] {logging_mixin.py:109} INFO - Running <TaskInstance: users_and_posts_etl_dag.load_data 2021-09-07T02:40:31.592596+00:00 [running]> on host 731700afc5ff
[2021-09-07 02:40:33,848] {taskinstance.py:1251} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=users_and_posts_etl_dag
AIRFLOW_CTX_TASK_ID=load_data
AIRFLOW_CTX_EXECUTION_DATE=2021-09-07T02:40:31.592596+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2021-09-07T02:40:31.592596+00:00
[2021-09-07 02:40:33,866] {base.py:70} INFO - Using connection to: id: ***. Host: ***-docker_postgres_1, Port: None, Schema: ***, Login: ***, Password: ***, extra: {}
[2021-09-07 02:40:33,870] {taskinstance.py:1462} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1164, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1282, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1312, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 150, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 161, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/hoverstate_etl.py", line 90, in load_data
    execute_load(pg_hook, "users", users_path)
  File "/opt/airflow/dags/hoverstate_etl.py", line 150, in execute_load
    pg_hook.copy_expert(query, file_path)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/postgres/hooks/postgres.py", line 136, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: unterminated quoted string at or near "'|)
        "
LINE 2:         COPY users FROM STDIN (delimiter '|)
                                                 ^

[2021-09-07 02:40:33,872] {taskinstance.py:1505} INFO - Marking task as FAILED. dag_id=users_and_posts_etl_dag, task_id=load_data, execution_date=20210907T024031, start_date=20210907T024033, end_date=20210907T024033
[2021-09-07 02:40:33,908] {local_task_job.py:151} INFO - Task exited with return code 1
[2021-09-07 02:40:33,926] {local_task_job.py:261} INFO - 0 downstream tasks scheduled from follow-on schedule check
